[package]
name = "neocities_site"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
log = "0.4.25"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
wgpu = { version = "*", features = ["webgpu", "webgl"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
