[package]
name = "neocities_site"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
log = "0.4.25"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
wgpu = { version = "*", features = ["webgpu", "webgl"] }
build_timestamp = { path = "build_timestamp" }
chrono = { version = "0.4.39", default-features = false }
rich_text_md = { path = "rich_text_md" }
rand = "0.9.0"
getrandom = { version = "*", features = ["wasm_js"] }
commit_log = { path = "commit_log" }
rodio = { version = "0.20.1", default-features = false, features = [
    "mp3",
    "wasm-bindgen",
] }
egui_extras = { version = "0.31.0", features = ["http", "image"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
ehttp = "0.5.0"
anyhow = "1.0.95"
base64 = "0.22.1"

[workspace]
